--- a/src/content/technotes/TN0006-unmanaged-federation.mdx
+++ b/src/content/technotes/TN0006-unmanaged-federation.mdx
@@ -32,7 +32,7 @@ To run the `rover supergraph compose` command, you need access to each subgraph'
 - Use the `rover subgraph introspect` command to fetch subgraph schemas via introspection
 - Fetch subgraph schemas from a version control service, such as Github or Gitlab
 
-As described in the [Build status webhook section](#build-status-webhook), make sure to use [run schema checks in your CI/CD pipeline](/rover/commands/subgraphs/#checking-subgraph-schema-changes) or during build time to verify that any changes won't break existing clients. 
+As described in the [Build status webhook section](#build-status-webhook), make sure to use [schema checks in your CI/CD pipeline](/rover/commands/subgraphs/#checking-subgraph-schema-changes) or during build time to verify that any changes won't break existing clients. 
 
 For more information on how to accomplish this, see: 
 
@@ -63,8 +63,6 @@ services:
 ```
 
 After you make the schema file available to your gateway instances, pass a function to the `supergraphSdl` option of your `ApolloGateway` constructor that enables the gateway to hot reload the schema. The example function below uses the `chokidar` library to watch for file updates:
-
-In the code above, the `ApolloGateway` is passed a `supergaphSdl` property. This property can be a string (for a supergraph schema that _never_ changes), or it can be a function that enables updating the schema during runtime as shown.  
 
 ```js
 const { ApolloServer } = require('apollo-server');
@@ -104,6 +102,8 @@ server.listen().then(({ url }) => {
   console.log(`🚀 Server ready at ${url}`);
 });
 ```
+
+In the code above, the `ApolloGateway` is passed a `supergaphSdl` property. This property can be a string (for a supergraph schema that _never_ changes during runtime), or it can be a function that enables updating the schema during runtime as shown.  
 
 For more information on this approach, [see the Apollo Gateway docs](/federation/gateway.mdx#updating-the-supergraph-schema).
 
@@ -168,6 +168,6 @@ const gateway = new ApolloGateway({
 
 ### Restart the gateway/router (not recommended)
 
-The most straightforward option is to restart all of your gateway or router instances. If you pass your supergraph schema file to these instances via a build process (such as a Docker image), you can redeploy for your changes to take effect.
+The most straightforward option for updating your supergraph schema is to restart all of your gateway or router instances. If you pass your supergraph schema file to these instances via a build process (such as a Docker image), you can redeploy for your changes to take effect.
 
 **This method is _not_ recommended,** because the restart causes downtime for your supergraph. The methods described above can update your supergraph schema _without_ requiring redeployment.
